--- a/template/index.html
+++ b/template/index.html
@@ -113,7 +113,7 @@
               <a href="#">
                   <img src="img/bbb.jpg" alt="Product Image" class="img-fluid">
               </a>
-              <div class="product-details">
+              <div class="product-details mt-4">
                   <h4 class="product-title text-center">Product 1</h4>
                   <p class="product-description text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
               </div>
@@ -128,7 +128,7 @@
               <a href="#">
                   <img src="img/bbb.jpg" alt="Product Image" class="img-fluid">
               </a>
-              <div class="product-details">
+              <div class="product-details mt-4">
                   <h4 class="product-title text-center">Product 2</h4>
                   <p class="product-description text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
               </div>
@@ -143,7 +143,7 @@
               <a href="#">
                   <img src="img/bbb.jpg" alt="Product Image" class="img-fluid">
               </a>
-              <div class="product-details">
+              <div class="product-details mt-4">
                   <h4 class="product-title text-center">Product 3</h4>
                   <p class="product-description text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
               </div>
@@ -159,55 +159,53 @@
 
   </section>
   
-  <section id="About Us">
-  
-    <footer>
-      <footer class="bg-dark text-light py-5">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-4">
-              <h4 class="mb-4">Alamat</h4>
-              <li><a href="https://maps.app.goo.gl/351W5X1v4Nkk9551A" class="text-light">Gang Kopo II Rt03/12, Tanah Baru, Kecamatan Beji, Kota Depok, Jawa Barat 16426, Indonesia</a></li>  
-            </div>
-            
-            <div class="col-md-4">
-              <h4 class="mb-4">Contact Us</h4>
-              <p>Email: <span class="text-warning">Louvrea.jabodetabek@gmail.com</span></p>
-              <p>WhatsApp: <span class="text-warning">+6281310836761</span></p>
-            </div>
-            
-            <div class="col-md-4">
-              <h4 class="mb-4">About Us</h4>
-              <ul class="list-unstyled">
-                <li><a href="aboutus.html" class="text-light">About Louvrea</a></li>
-                <li><a href="aboutus.html" class="text-light">Our Official Reseller</a></li>
-                
-
-              </ul>
-            </div>
+  <section id="About Us"> 
+    <footer class="bg-dark text-light py-5 mt-4">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3">
+            <h4 class="mb-4">Alamat</h4>
+            <ul class="list-unstyled">
+              <li><a href="https://maps.app.goo.gl/351W5X1v4Nkk9551A" class="text-light">Gang Kopo II Rt03/12, Tanah Baru, Kecamatan Beji, Kota Depok, Jawa Barat 16426, Indonesia</a></li>
+            </ul>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
+            <h4 class="mb-4">Contact Us</h4>
+            <ul class="list-unstyled">
+              <li>Email: <span class="text-warning">Louvrea.jabodetabek@gmail.com</span></li>
+              <li>WhatsApp: <span class="text-warning">+6281310836761</span></li>
+            </ul>
+          </div>
+          <div class="col-md-3">
+            <h4 class="mb-4">About Us</h4>
+            <ul class="list-unstyled">
+              <li><a href="aboutus.html" class="text-light">About Louvrea</a></li>
+              <li><a href="resellerinfo.html" class="text-light">Our Official Reseller</a></li>
+              <li><a href="howtoorder.html" class="text-light">Order and Return</a></li>
+              <li><a href="disclaimer.html" class="text-light">Disclaimer</a></li>
+            </ul>
+          </div>
+          <div class="col-md-3">
             <h4 class="mb-4">Follow Us</h4>
             <ul class="list-unstyled">
-              <li><a href="#" class="text-light"><i class="icofont-instagram"></i></a></li>
-              <li><a href="#" class="text-light"><i class="icofont-whatsapp"></i></a></li>
-              <li><a href="#" class="text-light">Shopee</a></li>
-              <li><a href="#" class="text-light">Tokopedia</a></li>
-              <li><a href="#" class="text-light">Bukalapak</a></li>
+              <li><a href="https://www.instagram.com/louvrea_jabodetabek/" class="text-light"><i class="icofont-instagram"></i></a></li>
+              <li><a href="https://api.whatsapp.com/send/?phone=%2B6281282204770&text&type=phone_number&app_absent=0" class="text-light"><i class="icofont-whatsapp"></i></a></li>
+              <li><a href="https://shopee.co.id/louvrea_skincare?smtt=0.0.9" class="text-light">Shopee</a></li>
+              <li><a href="https://tokopedia.link/bGwtOOylCAb" class="text-light">Tokopedia</a></li>
+              <li><a href="https://www.bukalapak.com/u/louvrea_skincare_465402" class="text-light">Bukalapak</a></li>
             </ul>
           </div>
         </div>
-          <div class="row mt-3">
-            <div class="col-md-12 text-center">
-              <p>&copy; 2023 Louvrea. All rights reserved.</p>
-            </div>
+        <div class="row mt-3">
+          <div class="col-md-12 text-center">
+            <p>&copy; 2023 Louvrea. All rights reserved.</p>
           </div>
         </div>
-      </footer>
-</section>
       </div>
-    </div>
-  </div>
+    </footer>
+    
+</section>
+ 
 
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
